Fix align

--- a/portfolio/stylesheets/main.css
+++ b/portfolio/stylesheets/main.css
@@ -1,7 +1,10 @@
 @media only screen and (max-width: 500px) {
 
     .blockPort img{
-    border-radius: 100%;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+    border-bottom-left-radius: 100%;
+    border-bottom-right-radius: 100%;
     border: 0.2em solid;
     width: 70%;
     }
